# port-cleaner

./: README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-16-port-cleaner-mvp.md  2026-07-20-compact-binding-statistics.md  2026-07-20-header-refresh-windows-launch.md  2026-07-20-macos-select-styling.md  2026-07-20-windows-force-termination-command-preview.md  2026-07-20-windows-hidden-child-processes.md
docs/superpowers/specs/: 2026-07-20-compact-binding-statistics-design.md  2026-07-20-header-refresh-windows-launch-design.md  2026-07-20-macos-select-styling-design.md  2026-07-20-windows-force-termination-command-preview-design.md  (+1 more)
docs/validation/: port-cleaner-manual-checklist.md
scripts/: desktop-config.test.mjs  ui-style.test.mjs  verify-release-metadata.mjs  verify-release-metadata.test.mjs  windows-command-config.test.mjs
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  domain.rs  error.rs  lib.rs  main.rs  process_service.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: platform_parsing.rs  process_service.rs  termination.rs
src-tauri/tests/fixtures/: linux-ss.txt  macos-lsof.txt  windows-netstat.txt
src/api/: portCleaner.test.ts  portCleaner.ts
src/components/: BindingTable.tsx  ConsoleHeader.tsx  FilterBar.tsx  ProcessDetailsPanel.tsx  SummaryMetrics.tsx  TerminateDialog.tsx
src/types/: portCleaner.ts
src/utils/: termination.test.ts  termination.ts
